--- a/index.html
+++ b/index.html
@@ -4,27 +4,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ryan Parham</title>
+    <title>My Resume</title>
 </head>
 
 <body>
-    <h1>Ryan Parham's Portfolio</h1>
-    <h2>Learning to build websites!</h2>
+    <img src="./images-resume/headshot.jpg" alt="headshot" height="300" />
+
+    <h1>Summary</h1>
+    This page is an area I'll be showcasing my projects and thoughts!
+    <hr>
+    <h1>Education</h1>
+    <ul>
+        <li>Jackson State Community College
+            <ul>
+                <li>Associates of Science</li>
+            </ul>
+        </li>
+        <li>Middle Tennessee State University
+            <ul>
+                <li>Bachelors in Computer Information Systems</li>
+            </ul>
+        </li>
+    </ul>
+    <hr>
+    <h1>Work Experience</h1>
+
+<h4>Dell Technologies</h4>
+<ul>
+    <li>Account Manager III
+        <ul>
+            <li>March 2023 - Present                
+            </li>
+        </ul>
+    </li>
+    <br>
+    <li>Account Manager II
+        <ul>
+            <li>Aug 2021 -April 2023              
+            </li>
+        </ul>
+    </li>
+    <br>
+    <li>Account Manager I 
+        <ul>
+            <li>Jan 2020 - Sep 2021               
+            </li>
+        </ul>
+    </li>
+</ul>
+<p>
+Job Role: As a business development manager, I excel in building relationships with new and existing clients, addressing market challenges, and making suggestions for improvement. 
+With extensive experience in managing Tech accounts, I am well-equipped to engage customers and resolve business continuity issues swiftly and efficiently. 
+My ability to stay up-to-date with industry trends enables me to ensure sustained success across all business areas.
+    </p>
+
+    <hr>
+    <h1>Skills</h1>
+    To be determined ;) 
+    <hr>
+    <h1>Awards</h1>
+    <ul>
+        <li>Dell's President Club 2022 - Top 2%</li> 
+    </ul>
     <hr>
 
-    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-    <img src="./assets/images/Movie-Rank.PNG" height="80" />
-
-
-    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-    <img src="./assets/images/B-DAY.PNG" height="200" />
-
-    <hr>
-
-    <a href="./public/about.html">About Me</a>
-    <a href="./public/contact.html">Contact Me</a>
+    <footer>Ryan Parham Copyright.. All Right Reserved</footer>
 
 </body>
+
 </html>
-
-
